Add separate makefiles for cupspy and doc

--- a/configure.ac
+++ b/configure.ac
@@ -29,6 +29,7 @@ directarg(internal-programs,[internal programs],[pkgexecdir],[$libexecdir/gnuspo
 directarg(pkgdatadir,[data files other than help],[pkgdatadir],[$datadir/gnuspool])
 directarg(helpfiles,[help files],[sphelpdir],[$pkgdatadir/help])
 directarg(printers-directory,[printer setup files],[spoolpt],[$pkgdatadir/ptrs])
+directarg(cupspy-directory,[directory for CUPS emulation],[cupspydir],[$sysconfdir/cups/cupspy])
 
 if test "$SPOOLUSER" = ""
 then SPOOLUSER=gnuspool
@@ -572,7 +573,7 @@ AC_CONFIG_COMMANDS([src/hdrs/files.h],
 AC_OUTPUT(Makefile util/Makefile src/Makefile src/helpmsg/Makefile src/hdrs/infiles.h
 src/lib/Makefile  src/ins/Makefile src/termserv/Makefile src/lpdint/Makefile src/gtk/Makefile
 src/motif/Makefile src/apilib/Makefile src/loccgi/Makefile src/remcgi/Makefile gspl-ptrinstall Netinst Checkuserinst Userinst src/ins/installlpcmds
-STARTUP/Startdirs)
+STARTUP/Startdirs cupspy/Makefile doc/Makefile)
 
 AH_TEMPLATE([BROKEN_COMBOBOX], [Define if Motif combo boxes don't work])
 AH_TEMPLATE([BROKEN_RENDITION], [Define if Motif renditions don't work])
