Final fixes for Debian (plus src/Makefile fix)
Get gspl-mrpr name right in src/Makefile.in
Fix file name error in doc/Makefile.in
Install Python mods which aren't main programs as data in cupspy.
Adjust rules file, mostly for shared libraries for Debian.

--- a/cupspy/Makefile.in
+++ b/cupspy/Makefile.in
@@ -26,6 +26,9 @@ exec_prefix	=	@exec_prefix@
 CUPSPYDIR	=	$(DESTDIR)@cupspydir@
 INSTALL		=	@INSTALL@
 INSTALL_DATA	=	@INSTALL_DATA@
+MAINPROGS	=	cups.py cupspy-setup.py
+PYMODS		=	confdefault.py conf.py filebuf.py ipp.py
+CONFIGDATA	=	Default.ppd cupspy.conf
 STAGED_INSTALL	=	false
 
 all:	cupspy
@@ -34,8 +37,8 @@ cupspy:
 	# Currently don't do anything
 
 install install-strip: all
-	$(INSTALL) *.py $(CUPSPYDIR)
-	$(INSTALL_DATA) Default.ppd cupspy.conf $(CUPSPYDIR)
+	$(INSTALL) $(MAINPROGS) $(CUPSPYDIR)
+	$(INSTALL_DATA) $(PYMODS) $(CONFIGDATA) $(CUPSPYDIR)
 
 clean:
 	# Currently don't do anything
