use dh_install (rather than cppack) and rearange the library packages rename the pre/post files for gnuspool to make it obvious what they belong to use dh_makeshlibs rather than debian/shlibs.* files

--- a/debian/control
+++ b/debian/control
@@ -19,11 +19,17 @@ Section: doc
 Description: Documentation for GNUspool
  PDF documentation for GNUspool
 
-Package: libgnuspool
+Package: libgnuspool-1-1
 Architecture: any
-Depends: gnuspool (= ${binary:Version})
+Depends: ${shlibs:Depends}, gnuspool (= ${binary:Version})
 Description: API development library for GNUspool
- Consists of API library and include
+ Consists of the shared API library
+
+Package: libgnuspool-dev
+Section: libdevel
+Architecture: any
+Description: API development library for GNUspool
+ Consists of static API library and include files
 
 Package: gnuspool-cupspy
 Architecture: all
