--- a/debian/control
+++ b/debian/control
@@ -23,13 +23,7 @@ Package: libgnuspool-1-1
 Architecture: any
 Depends: ${shlibs:Depends}, gnuspool (= ${binary:Version})
 Description: API development library for GNUspool
- Consists of the shared API library
-
-Package: libgnuspool-dev
-Section: libdevel
-Architecture: any
-Description: API development library for GNUspool
- Consists of static API library and include files
+ Consists of the static and shared API libraries and include file
 
 Package: gnuspool-cupspy
 Architecture: all
