--- a/src/lib/Makefile.in
+++ b/src/lib/Makefile.in
@@ -63,8 +63,8 @@ LIBOBJECTS=$(OBJECTS:.o=.lo)
 LIBCURSOBJS=$(CURSOBJS:.o=.lo)
 
 all:	$(OBJECTS) $(CURSOBJS)
-	libtool --mode=link @CC@ $(CCFLAGS) -o $(LIB) $(LIBOBJECTS) -rpath $(LIBDIR) -version-info 1:6:0 -release 1
-	libtool --mode=link @CC@ $(CCFLAGS) -o $(LIBCURS) $(LIBCURSOBJS) -rpath $(LIBDIR) -version-info 1:6:0 -release 1
+	libtool --mode=link @CC@ $(CCFLAGS) -o $(LIB) $(LIBOBJECTS) -rpath $(LIBDIR) -version-info 0:0:0
+	libtool --mode=link @CC@ $(CCFLAGS) -o $(LIBCURS) $(LIBCURSOBJS) -rpath $(LIBDIR) -version-info 0:0:0
 
 install: all
 	libtool --mode=install $(INSTALL) $(LIB) $(LIBDIR)
