--- a/src/apilib/Makefile.in
+++ b/src/apilib/Makefile.in
@@ -57,7 +57,7 @@ OBJECTS=gspool_getspd.o\
 LIBOBJECTS=$(OBJECTS:.o=.lo)
 
 all:	gspool.h $(OBJECTS)
-	libtool --mode=link @CC@ $(CCFLAGS) -o $(APILIB) $(LIBOBJECTS) -rpath $(LIBDIR) -version-info 1:6:0 -release 1
+	libtool --mode=link @CC@ $(CCFLAGS) -o $(APILIB) $(LIBOBJECTS) -rpath $(LIBDIR) -version-info 0:0:0
 
 # Build header out of the bits
 
