--- a/debian/rules
+++ b/debian/rules
@@ -67,7 +67,7 @@ install: build
 	echo 'This directory is for printer setup files' >$(CURDIR)/debian/tmp/usr/share/gnuspool/ptrs/README
 	# Get rid of remote CGI bins for now as they depend on separated API library.
 	rm -f $(CURDIR)/debian/tmp/usr/lib/gnuspool/cgi-bin/r*
-	# FIXME: if these libraries are really inmternal only, why is the make install publishing their .la files
+	# Remove .la files for internal only
 	rm -f $(CURDIR)/debian/tmp/usr/lib/libgnuspool_int.la
 	rm -f $(CURDIR)/debian/tmp/usr/lib/libgnuspool_curs.la
 
