Remove "onecopy" from LPD protocol specs.
Putting multiple :Fs in the protocol to print multiple copies (and stopping
GNUspool just doing multiple prints) isn't reliable with all printers which
can ignore the multiple :F commands in the C-File.

So turn off the printer installation doing this by default and xtlpc-ctrl
worrying about SPOOLCPS

--- a/gspl-ptrinstall.in
+++ b/gspl-ptrinstall.in
@@ -129,7 +129,7 @@ $Options = {
 	       [ "norange", "N", "Ignore page ranges" ],
 	       [ "inclpage1", "N", "Always print page 1 when printing ranges" ],
 	       [ "single", "N", "Single-job mode" ],
-	       [ "onecopy", "Y", "Limit to one copy - handled elsewhere" ] ] } ;
+	       [ "onecopy", "N", "Limit to one copy - handled elsewhere" ] ] } ;
 
 # Change previous way of recording port types
 
