--- a/gspl-ptrinstall.in
+++ b/gspl-ptrinstall.in
@@ -2028,6 +2028,33 @@ sub proc_remove {
 
 die "You have to be super-user to run this" unless $> == 0;
 
+if (findonpath('python')) {
+    $pyprog = $Config{SDATADIR} . "ptrinstall/ptrinstall.py";
+    $c = system('python $pyprog');
+    exit 0 if $c == 0;
+    $ec = $c >> 8;
+    if ($ec == 20) {
+	print <<EOT;
+You seem to have Python installed but not PyQt4.
+If you install this you should be able to install printers using a GUI interface.
+EOT
+    }
+    elsif ($ec == 21) {
+	print <<EOT;
+You seem to have Python installed and PyQt4 but are missing the
+auto-generated config.py.
+If you install this you should be able to install printers using a GUI interface.
+EOT
+    }
+    else {
+	print <<EOT;
+Sorry but the Python interface failed.
+Please try to install it or mend it if it is installed.
+If you install this you should be able to install printers using a GUI interface.
+EOT
+    }
+}
+    
 $Systemtype = `uname -s`;
 chop $Systemtype;
 
